# aula02_agentic_tooluse

./: .env.example  .gitignore  README.md  TEST_RESULTS.txt  aula_02_arquitetura_agentic_tool_use.md  desafio.md
.serena/: project.yml
Aula01/: .agent_memory.example.jsonl  .gitignore  README.md  pyproject.toml
Aula01/data/: porto_mock_data.json
Aula01/src/activities/: __init__.py  activity_01_chatbot_vs_workflow_vs_agent.py  activity_02_openai_tool_agent.py  activity_03_memory_validation_logs.py  activity_04_agent_blueprint.py  activity_05_langchain_agent_optional.py  activity_06_pydanticai_agent_optional.py  common.py
Aula01/tests/: test_activities.py
Aula02/src/: mini_agent_porto.py
Aula02/tests/: test_mini_agent_porto.py
Aula03/: README.md  main.py  pyproject.toml
Aula04/: AULA_04_GUARDRAILS_E_AVALIACAO_INICIAL.md  README.md  requirements.txt
Aula04/src/: aula04_guardrails_eval_demo.py  boilerplate_guardrails_langgraph.py  gabarito_exercicio2_guardrail_acoes_criticas.py
Aula04/tests/: test_aula04_guardrails_eval_demo.py
Aula05/: README.md  VALIDACAO_TESTES.txt  boilerplate_aula05.py  requirements.txt
Aula06/: Dockerfile  Makefile  README.md  docker-compose.yml  requirements.txt
Aula06/app/: __init__.py  (+12 more)
aula04_guardrails_google_agent/: .env.example  .gitignore  README.md  diagrama-c4-aula04.mmd  pyproject.toml
aula04_guardrails_google_agent/src/aula04_guardrails_agent/: __init__.py  cli.py  facade.py  tools.py
aula04_guardrails_google_agent/tests/: test_facade.py
src/: agent.py  mini_agent_porto.py
tests/: test_mini_agent_porto.py
(+36 files in other folders)
