[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "porto-aula01-agentes"
version = "0.1.0"
description = "Atividades base para Aula 01 - Arquiteturas de Agentes"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.109.0",
  "pydantic>=2.8.0",
]

[project.optional-dependencies]
langchain = [
  "langchain>=1.0.0",
  "langchain-openai>=1.0.0",
]
pydanticai = [
  "pydantic-ai>=0.8.0",
]

[dependency-groups]
dev = [
  "pytest>=8.2.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
